--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.js" charset="utf-8"></script>
-		<script src="module.js"></script>
-				<script src="app.js"></script>
-		<link rel="stylesheet" href="app.css">
+		<script src="js/module.js"></script>
+				<script src="js/app.js"></script>
+		<link rel="stylesheet" href="css/app.css">
 	
 	</head>
 	<!--______________________________________________________BEGIN APP-->
 	<body>
 
-
+<h1>Synthy API </h1>
 
        	<ul id="piano">
 	
